[tool.poetry]
name = "pathfinding"
version = "0.1.0"
description = "pathfinding exploration"
authors = ["Peter Simone <plssimone@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
matplotlib = "^3.9.0"
flake8 = "^7.0.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
